--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
       src="https://kit.fontawesome.com/63a7468b81.js"
       crossorigin="anonymous"
     ></script>
-    <script src="/js/greeting.js" defer></script>
-    <script src="/js/clock.js" defer></script>
-    <script src="/js/background.js" defer></script>
-    <script src="/js/quotes.js" defer></script>
-    <script src="/js/weather.js" defer></script>
-    <script src="/js/todo.js" defer></script>
+    <script src="./js/greeting.js" defer></script>
+    <script src="./js/clock.js" defer></script>
+    <script src="./js/background.js" defer></script>
+    <script src="./js/quotes.js" defer></script>
+    <script src="./js/weather.js" defer></script>
+    <script src="./js/todo.js" defer></script>
     <title>Momentum</title>
   </head>
 
