--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div id="hubble" class="hubble"></div>
         <span class="info">Look at the view <br />through a telescope!</span>
         <div id="counter" class="counter">
-          <span class="counter__title">2023 New Year's Day</span>
+          <span class="counter__title">2023 New Year's Day</span><br />
           <span></span>
         </div>
         <div id="weather" class="weather">
