--- a/index.html
+++ b/index.html
@@ -43,11 +43,12 @@
         <div id="hubble" class="hubble"></div>
         <span class="info">Look at the view <br />through a telescope!</span>
         <div id="counter" class="counter">
-          <span class="counter__title">2023 New Year's Day</span><br />
+          <h3 class="counter__title">2023 New Year's Day</h3>
+          <br />
           <span></span>
         </div>
         <div id="weather" class="weather">
-          <span class="weather__title">Today's weather</span>
+          <h3 class="weather__title">Today's weather</h3>
           <span></span>
           <span></span>
         </div>
@@ -61,7 +62,7 @@
           </div>
           <h2 id="greeting" class="greeting"></h2>
         </div>
-        <div class>
+        <div>
           <div id="quote">
             <div></div>
           </div>
